# graduate_work

./: Makefile  README.md
auth-service/: Makefile  README.md
auth-service/auth/: Dockerfile  pyproject.toml
billing-service/: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
billing-service/admin-panel/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
billing-service/admin-panel/billing/: admin.py  enums.py  models.py
billing-service/admin-panel/config/: base_settings.py  settings.py
billing-service/admin-panel/config/components/: database.py  installed_apps.py  security.py
billing-service/admin-panel/utils/: api.py  logger.py  models.py  urls.py
billing-service/backend/: Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
billing-service/backend/alembic/: env.py
billing-service/backend/alembic/versions/: 01_initial_99fa9387847b.py  977cc8d9864e_create_tables.py
billing-service/backend/config/: config.py
billing-service/backend/db/: postgres.py
billing-service/backend/models/: base_models.py  models.py
billing-service/backend/src/: main.py
billing-service/backend/src/api/v1/: routers.py
billing-service/backend/src/api/v1/endpoints/: __init__.py  backoffice.py  customers.py  subscriptions.py  webhooks.py
billing-service/backend/src/api/v1/endpoints/webhooks/: stripe.py
billing-service/backend/src/api/v1/openapi/: __init__.py  backoffice.py  customer.py  subscription.py  webhooks.py
billing-service/backend/src/config/: config.py
billing-service/backend/src/core/: exceptions.py  logger.py  utils.py
billing-service/backend/src/db/: postgres.py
billing-service/backend/src/db/crud/: __init__.py  base.py  payment_method.py  provider.py  subscription.py  transaction.py  user_subscription.py
billing-service/backend/src/jwt/: jwt.py
billing-service/backend/src/managers/: __init__.py  base.py  payment_method.py  subscription.py  transaction.py
billing-service/backend/src/models/: base_models.py  models.py
billing-service/backend/src/providers/: __init__.py  base.py  stripe.py
billing-service/backend/src/providers/templates/stripe/: add_card.html
billing-service/backend/src/schemas/: __init__.py  backoffice.py  payment_method.py  subscription.py  transaction.py  user.py
billing-service/backend/src/services/: external.py
billing-service/infra/: docker-compose-dev.yaml  docker-compose-test.yaml  docker-compose.yaml
billing-service/migration/: env.py
billing-service/tests/: Dockerfile  conftest.py  docker-entrypoint.sh  pyproject.toml
billing-service/tests/functional/core/: settings.py
billing-service/tests/functional/fixtures/: api_fixtures.py  url_fixtures.py
billing-service/tests/functional/models/: response.py
billing-service/tests/functional/src/: test_backoffice.py  test_customers.py  test_subscriptions.py
billing-service/worker/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
billing-service/worker/src/: config.py  logger.py  main.py  models.py  postgres.py
docs/: architecture.puml
movies-service/: Makefile  README.md
movies-service/admin-panel/: docker-entrypoint.sh
notifications-service/: Makefile  README.md
notifications-service/admin-panel/: uwsgi.ini
notifications-service/worker/: pyproject.toml
ugc-service/: Makefile  README.md
(+51 files in other folders)
