[tool.poetry]
name = "Admin-panel"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pydantic-settings = "^2.0.3"
django-split-settings = "^1.2.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
uwsgi = {version = "^2.0.22", platform = "linux"}
pydantic = "^2.4.2"
requests = "^2.3.11"
django-object-actions = "^4.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"