[tool.poetry]
name = "Linters"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.100.1"
async-fastapi-jwt-auth = {extras = ["asymmetric"], version = "^0.6.1"}
orjson = "^3.9.10"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
greenlet = "^3.0.1"
gunicorn = "^21.2.0"
stripe = "^7.2.0"
jinja2 = "^3.1.2"
aiohttp = "^3.8.6"
backoff = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"