[tool.poetry]
name = "SubscriptionWorker"
description = ""
version = "0.1.0"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.28.0"
aiohttp = "^3.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
